<resources>
    <string name="app_name">Neuron</string>
    <string name="transfer_button">转账</string>
    <string name="token_transfer_value">转账金额</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="select_wallet_unlock">选择钱包</string>
    <string name="title_add_token">添加资产</string>
    <string name="add_wallet">添加钱包</string>
    <string name="manage_token_list">列表设置</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="query">查询</string>
    <string name="title_token_management">列表设置</string>
    <string name="title_receive_qrcode">收款</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="confirm_mnemonic">确认助记词</string>
    <string name="title_transfer">转账</string>
    <string name="wallet_assets_start_query">----</string>
    <string name="title_create_wallet">创建钱包</string>
    <string name="title_import_wallet">导入钱包</string>
    <string name="next_action">下一步</string>
    <string name="backup_complete">完成备份</string>
    <string name="import_wallet">开始导入</string>
    <string name="exist_wallet">已有钱包</string>
    <string name="create_wallet_name">钱包名称</string>
    <string name="change_password">修改密码</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="ok">确定</string>
    <string name="go_on">继续</string>
    <string name="import_wallet_content">粘贴以太坊Keystore内容至输入框，或通过扫描二维码输入</string>
    <string name="import_wallet_content_hint">请导入Keystore文本</string>
    <string name="change_password_warning">钱包密码如丢失将无法找回，请您妥善保管密码</string>
    <string name="import_mnemonic_warning">请按顺序输入您的助记词，并选择助记词路径</string>
    <string name="import_mnemonic_input_hint">请按顺序输入您的助记词，按空格分隔</string>
    <string name="import_private_key_warning">请输入您的私钥，或通过二维码扫描输入</string>
    <string name="export_keystore_warning">Keystore 是使用钱包密码加密后的文本信息，请您妥善保管。导出的 Keystore 格式与以太坊官方 Keystore 格式相同。</string>
    <string name="tab_application">应用</string>
    <string name="tab_wallet">钱包</string>
    <string name="tab_me">我的</string>
    <string name="wallet_token_total_money">总资产</string>
    <string name="copy_address">复制地址</string>
    <string name="token_warning_message">该token无任何价值，仅做开发者测试使用</string>
    <string name="backup_mnemonic_warning1">助记词将被用来恢复钱包或重置钱包密码</string>
    <string name="backup_mnemonic_warning2">- 如您的助记词被他人获取，您的财产可能受到损失</string>
    <string name="backup_mnemonic_warning3">- 不要截图或传送给他人</string>
    <string name="backup_mnemonic_warning4">- 推荐抄写并放在安全的地方</string>
    <string name="confirm_mnemonic_warning">请按顺序点击助记词，以确认你的备份助记词正确</string>
    <string name="input_password">设置密码</string>
    <string name="confirm_action">确认</string>
    <string name="confirm_transfer_action">确认发送</string>
    <string name="input_app_website_hint">请输入应用网址</string>
    <string name="import_mnemonic_path_err">请先填写自定义路径</string>
    <string name="collection_id_place_holder">ID:%s</string>
    <string name="transfer_balance_place_holder">余额：%s</string>
    <string name="message_permission_always_failed">请允许我们使用权限:\n\n%1$s</string>
    <string name="resume">恢复</string>
    <string name="message_permission_rationale">申请下列权限以保证应用可以正常运行:\n\n%1$s</string>
    <string name="password_suggestion">密码包含大写字母、小写字母、数字、特殊符号的至少三类，且长度在8位以上！</string>
    <string name="empty_no_token_data">您还没有Token数据</string>
    <string name="empty_no_collection_data">您还没有藏品数据</string>
    <string name="empty_no_transaction_data">您还没有交易数据</string>
    <string name="empty_no_history_data">您还没有历史浏览记录</string>
    <string name="confirm_pay">支付详情</string>
    <string name="loading">正在加载</string>
    <string name="reject">拒绝</string>
    <string name="receive_address">接收地址</string>
    <string name="pay_detail">支付详情</string>
    <string name="dialog_sign_title">ÐApp签名确认</string>
    <string name="transfer_to_address">收款地址</string>
    <string name="pay_wallet">付款地址</string>
    <string name="update_password">修改密码</string>
    <string name="wallet_name">钱包名称</string>
    <string name="input_wallet_name">输入钱包名称</string>
    <string name="title_wallet_password">请输入钱包密码</string>
    <string name="input_password_hint">输入密码</string>
    <string name="input_new_password_hint">输入新密码</string>
    <string name="input_new_password_hint_again">再次输入新密码</string>
    <string name="input_new_password_again_hint">重复密码</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_weixin_success">客服微信已复制。</string>
    <string name="password_fail">密码错误</string>
    <string name="operation_success">操作已提交</string>
    <string name="operation_fail">操作失败</string>
    <string name="transfer_success">交易打包中，请稍后确认交易～</string>
    <string name="transfer_fail">转账失败</string>
    <string name="input_gas_price">请输入Gas Price</string>
    <string name="input_gas_limit">请输入Gas Limit</string>
    <string name="copy">复制</string>
    <string name="share">分享</string>
    <string name="wallet_title">钱包</string>
    <string name="receive_token">收款</string>
    <string name="me_title">我</string>
    <string name="setting_currency">本地货币</string>
    <string name="setting_fingerprint">指纹设置</string>
    <string name="setting_select_eth_net">切换以太坊网络</string>
    <string name="dialog_finger_msg">请验证已有指纹</string>
    <string name="fingerprint_setting_sucess">指纹设置成功！</string>
    <string name="fingerprint_setting_failed">指纹设置失败！</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_connect_us">联系我们</string>
    <string name="about_us_title">关于我们</string>
    <string name="about_us_source_code">源代码</string>
    <string name="about_us_server_private">服务及隐私条款</string>
    <string name="setting_nervos_forum">论坛</string>
    <string name="infua_describe">提供以太坊访问服务</string>
    <string name="openSea_describe">提供721数据服务</string>
    <string name="peckShield_describe">提供代码安全审计服务</string>
    <string name="cita_describe">区块链内核</string>
    <string name="path">路径</string>
    <string name="wallet_password_error">钱包密码错误</string>
    <string name="password">密码</string>
    <string name="ask_confirm_delete_wallet">确认删除钱包吗？</string>
    <string name="wrong_private_key">请输入正确格式的私钥</string>
    <string name="password_weak">您的密码安全性太弱，请重新输入</string>
    <string name="password_not_same">两次密码输入不一致</string>
    <string name="wallet_name_exist">该钱包名称已存在</string>
    <string name="wallet_address_exist">钱包地址已存在</string>
    <string name="wallet_export_success">钱包导入成功</string>
    <string name="wallet_creating">钱包创建中...</string>
    <string name="wallet_importing">钱包导入中...</string>
    <string name="wallet_pwd_hint">钱包密码</string>
    <string name="wallet_total_money">总资产</string>
    <string name="password_use_protect_private_key">此密码将被用于保护私钥和交易授权</string>
    <string name="no_wallet_suggestion">您还没有钱包，请先创建或者导入钱包</string>
    <string name="collect">收藏</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="wallet_name_not_null">钱包名称不能为空</string>
    <string name="generate_wallet">创建钱包</string>
    <string name="old_password_not_null">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="old_password_error">原密码不正确</string>
    <string name="old_new_password_same">您输入的密码与原密码一致，请重新输入</string>
    <string name="update_password_success">密码修改成功</string>
    <string name="update_wallet_name">修改钱包名称</string>
    <string name="input_wallet_name_hint">输入钱包名称</string>
    <string name="delete_success">删除成功</string>
    <string name="qrcode_handle_fail">解析二维码失败</string>
    <string name="wallet_manage_title">钱包管理</string>
    <string name="wallet_photo">钱包头像</string>
    <string name="wallet_address">钱包地址</string>
    <string name="export_keystore">导出Keystore</string>
    <string name="transaction_detail_title">交易详情</string>
    <string name="ethereum_mainnet">Ethereum Mainnet</string>
    <string name="press_back_finish">再按一次返回键退出</string>
    <string name="collect_title">我的藏品</string>
    <string name="my_dapp">我的ÐApp</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="reload">重新加载</string>
    <string name="transfer_address_not_null">转账地址不能为空</string>
    <string name="balance_not_enough_fee">请确保账户剩余%s 高于矿工费用，以便顺利完成转账～</string>
    <string name="transfer_amount_not_null">转账金额不能为空</string>
    <string name="input_correct_url">请输入正确的网页地址</string>
    <string name="address_error">您的地址错误，请重新输入</string>
    <string name="web_url_error">请扫描正确的网址二维码</string>
    <string name="keystore_error">请扫描正确的Keystore二维码</string>
    <string name="private_key_error">请扫描正确的私钥二维码</string>
    <string name="network_error">网络错误，请稍后重试</string>
    <string name="input_token_info">您的代币没有名称，无法成功导入！</string>
    <string name="exist_erc20_token">您的列表已有该代币</string>
    <string name="keystore">Keystore</string>
    <string name="mnemonic">助记词</string>
    <string name="private_key">私钥</string>
    <string name="dialog_title_tip">提示</string>
    <string name="dialog_finger_setting">您尚未设置Touch ID，请在手机系统“设置>Touch ID与密码”中添加指纹</string>
    <string name="have_known">知道了</string>
    <string name="meta_data_error">Can not get MetaData from host:</string>
    <string name="contract_address_error">请输入正确的合约地址</string>
    <string name="appchain_node_error">请输入正确的节点地址</string>
    <string name="input_receive_address_hint">请输入收款地址</string>
    <string name="fee_value">矿工费用</string>
    <string name="advanced_setup">高级设置</string>
    <string name="gas_fee">Gas费用</string>
    <string name="quota_fee">Quota费用</string>
    <string name="total_price">总费用</string>
    <string name="pay_token_receiver_website">ÐApp信息</string>
    <string name="pay_token_receiver_address">接收地址</string>
    <string name="pay_token_sender_address">支付地址</string>
    <string name="quota">Quota</string>
    <string name="hex">HEX</string>
    <string name="utf8">UTF8</string>
    <string name="wallet_top_change_wallet">切换钱包</string>
    <string name="wallet_top_add_wallet">添加钱包</string>
    <string name="ETH_Describe">Ethereum是一个运行智能合约的去中心化平台，应用将完全按照程序运作，不存在任何欺诈，审查与第三方干预的可能。</string>
    <string name="transaction_status_failed">交易失败</string>
    <string name="transaction_status_success">交易成功</string>
    <string name="transaction_status_pending">交易进行中</string>
    <string name="safe_hint">安全提示</string>
    <string name="root_hint">您的手机已root，可能造成财产损失，请替换手机登陆。</string>
    <string name="mnemonic_pre_path">m/44\'/60\'/</string>
    <string name="mnemonic_pre_hint">可手动输入</string>
    <string name="mnemonic_import_failed">导入失败</string>
    <string name="pic_source">图片来源</string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">相册</string>
    <string name="contract_create">"Contract Created"</string>
    <string name="empty_collect">空空如也</string>
    <string name="about_blank">about:blank</string>
    <string name="token">代币</string>
    <string name="add_assets">添加资产</string>
    <string name="wallet_token_loading">加载中...</string>
    <string name="wallet_token_loading_failed">加载失败</string>
    <string name="wallet_token_no_assets">暂无资产</string>
    <string name="dapp_title">ÐApp</string>
    <string name="import_keystore_error">您导入的Keystore失败，请重新输入</string>
    <string name="qrcode_receive_tips">此地址只接收AppChain、以太坊Token，发送其他币种到此地址将不可找回</string>
    <string name="import_finger_tip_title">指纹验证</string>
    <string name="import_finger_tip_text">请开启指纹验证，确保您的资产安全</string>
    <string name="import_finger_tip_button">开启指纹验证</string>
    <string name="import_finger_tip_button_cancel">暂不开启</string>
    <string name="please_input_gas_price">请输入以Gwei为单位的GasPrice</string>
    <string name="default_eth_gas_price">以太坊推荐值 %sGWei</string>
    <string name="default_eth_gas_limit">以太坊推荐值 GasLimit</string>
    <string name="gas_fee_token_value">Gas费用：%fETH</string>
    <string name="default_eth_gas_limit_value">21000</string>
    <string name="transaction_data">包含数据</string>
    <string name="gas_price">Gas Price</string>
</resources>