<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.cryptape.cita_wallet.view.TitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:isShowLeft="false"
        app:isShowRight="false"
        app:title="@string/import_finger_tip_title" />

    <ImageView
        android:id="@+id/iv_finger_print"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_finger_print_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/import_finger_tip_text"
        android:textColor="@color/font_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_finger_print" />

    <com.cryptape.cita_wallet.view.button.CommonButton
        android:id="@+id/cbtn_open"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv"
        app:text="@string/import_finger_tip_button" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/import_finger_tip_button_cancel"
        android:textColor="@color/font_link"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbtn_open" />

</android.support.constraint.ConstraintLayout>